--- a/eduwork.html
+++ b/eduwork.html
@@ -31,13 +31,13 @@
 <p><div id="Education"></p>
 <h2>Education</h2>
 <ul>
-<li><p>2015 - 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Systems at Inje University, Gimhae, South Korea</p>
+<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Systems at Inje University, Gimhae, South Korea</p>
 </li>
-<li><p>2013 - 2015: Master of Science (MS) Degree in Computer Science at Inje University, Gimhae, South Korea</p>
+<li><p>Sep. 2013 - Aug. 2015: Master of Science (MS) Degree in Computer Science at Inje University, Gimhae, South Korea</p>
 </li>
-<li><p>2008 - 2013: Bachelor Degree (BE) in Electronics and Telecommunications Engineering at Hanoi University of Science and Technology, Hanoi, Vietnam</p>
+<li><p>Sep. 2008 - Aug. 2013: Bachelor Degree (BE) in Electronics and Telecommunications Engineering at Hanoi University of Science and Technology, Hanoi, Vietnam</p>
 </li>
-<li><p>2005 - 2008: Donggia High School, Hai Duong, Vietnam</p>
+<li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
 </li>
 </ul>
 <p></div></p>
@@ -50,7 +50,9 @@
 </li>
 <li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, South Korea</p>
 </li>
-<li><p>2013 - 2017: Research Assistant, Inje University, South Korea</p>
+<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, South Korea</p>
+</li>
+<li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
 </li>
 </ul>
 <p></div></p>
@@ -64,7 +66,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-10 10:02:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-19 17:01:31 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
