--- a/activity.html
+++ b/activity.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks</a></div>
+<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 <div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
@@ -78,6 +78,8 @@
 </li>
 <li><p>IEEE Transactions on Cloud Computing </p>
 </li>
+<li><p>IEEE Transactions on Signal Processing</p>
+</li>
 <li><p>IEEE Transactions on Services Computing</p>
 </li>
 <li><p>IEEE Transactions on Industrial Informatics</p>
@@ -127,7 +129,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-07 11:50:35 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-29 11:27:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
