--- a/eduwork.html
+++ b/eduwork.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks</a></div>
+<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 <div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
@@ -41,8 +41,8 @@
 </li>
 </ul>
 <p></div></p>
-<p><div id="Working Experience"></p>
-<h2>Working Experience</h2>
+<p><div id="Academic Experience"></p>
+<h2>Academic Experience</h2>
 <ul>
 <li><p>Jan. 2020 - Present: Research Professor, Pusan National University, South Korea</p>
 </li>
@@ -66,7 +66,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-19 17:01:31 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-29 11:27:30 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
