--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks</a></div>
+<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 <div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
@@ -131,7 +131,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-19 16:09:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-29 11:27:23 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
