--- a/coursework.html
+++ b/coursework.html
@@ -37,29 +37,33 @@
 </li>
 <li><p>Selected Topics on Optimization: <a href="http://wireless.egr.uh.edu/Optimization/index.htm">http://wireless.egr.uh.edu/Optimization/index.htm</a></p>
 </li>
-<li><p>Introduction to Deep Learning: <a href="https://courses.d2l.ai/berkeley-stat-157/index.html">https:<i></i>courses.d2l.ai/berkeley-stat-157/index.html</a></p>
+<li><p>Introduction to Deep Learning: <a href="https://courses.d2l.ai/berkeley-stat-157/index.html">https://courses.d2l.ai/berkeley-stat-157/index.html</a></p>
 </li>
-<li><p>Introduction to Machine Learning: <a href="http://ee104.stanford.edu/">http:<i></i>ee104.stanford.edu/</a></p>
+<li><p>Introduction to Machine Learning: <a href="http://ee104.stanford.edu/">http://ee104.stanford.edu/</a></p>
 </li>
-<li><p>Introduction to Reinforcement Learning: <a href="https://web.stanford.edu/class/cs234/">https:<i></i>web.stanford.edu/class/cs234/</a></p>
+<li><p>Introduction to Reinforcement Learning: <a href="https://web.stanford.edu/class/cs234/">https://web.stanford.edu/class/cs234/</a></p>
 </li>
-<li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/">https:<i></i>web.stanford.edu/&nbsp;boyd/vmls/</a></p>
+<li><p>Introduction to Applied Linear Algebra: <a href="https://web.stanford.edu/~boyd/vmls/">https://web.stanford.edu/&nbsp;boyd/vmls/</a></p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Ebooks"></p>
 <h2>Ebooks</h2>
 <ul>
-<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/">https:<i></i>web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
+<li><p>Convex Optimization: <a href="https://web.stanford.edu/~boyd/cvxbook/">https://web.stanford.edu/&nbsp;boyd/cvxbook/</a></p>
 </li>
-<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html">http:<i></i>www.incompleteideas.net/book/the-book-2nd.html</a></p>
+<li><p>Reinforcement Learning: <a href="http://www.incompleteideas.net/book/the-book-2nd.html">http://www.incompleteideas.net/book/the-book-2nd.html</a></p>
 </li>
 <li><p>Dive into Deep Learning: <a href="https://d2l.ai/">https://d2l.ai/</a></p>
+</li>
+<li><p>Graph Neural Networks: Foundations, Frontiers, and Applications: <a href="https://graph-neural-networks.github.io/index.html">https://graph-neural-networks.github.io/index.html</a></p>
+</li>
+<li><p>Reinforcement Learning and Stochastic Optimization: <a href="https://castlelab.princeton.edu/rlso/">https://castlelab.princeton.edu/rlso/</a></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-29 11:24:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-02 14:20:35 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
