--- a/publication.html
+++ b/publication.html
@@ -57,6 +57,8 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>S.-M. Lee, <b>Q.-V. Pham</b>, M.-D. Nguyen, and W.-J. Hwang, &ldquo;<a href="">Federated Learning Network Model Parameter Compression Scheme Using Principal Component Analysis</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
+</li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
 </li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
@@ -75,8 +77,6 @@
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; under revision, <i>IEEE Access</i>. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
-</li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; under revision, <i>Proceedings of the IEEE</i>.</p>
@@ -92,6 +92,8 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, in press. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
+</li>
 <li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems With Applications</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9743401">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
@@ -312,7 +314,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-29 11:26:44 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-02 15:27:10 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
