--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p>[05/2022] Excellent news! <a href="https://arxiv.org/abs/2102.07572">Our comprehensive survey on transfer learning for wireless networks</a> is accepted to Proceedings of the IEEE.</p>
+</li>
 <li><p>[03/2022] My work on <a href="https://ieeexplore.ieee.org/document/9738797">aerial computing - a key enabler of 6G comprehensive computing infrastructure</a> is accepted to IEEE Internet of Things Journal. </p>
 </li>
 <li><p>[02/2022] I have been invited to serve as an editorial member for <a href="https://www.nature.com/srep/">Scientific Reports</a> [Nature, Q1, IF 4.379]. </p>
@@ -131,7 +133,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the golden globe award 2021 from the Ministry of Science and Technology (Vietnam).</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-29 11:27:23 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-11 10:28:45 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
