--- a/publication.html
+++ b/publication.html
@@ -79,8 +79,6 @@
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
 </li>
-<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under revision, <i>Computer Networks</i>.</p>
-</li>
 <li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
 </li>
 <li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
@@ -91,6 +89,8 @@
 <h2>2022 and In Press</h2>
 <ol>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; <i>Proceedings of the IEEE</i>, in press.</p>
+</li>
+<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9768809">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, in press. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
 </li>
@@ -314,7 +314,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-11 10:26:11 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-12 13:11:18 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
