--- a/publication.html
+++ b/publication.html
@@ -65,7 +65,9 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>IEEE Transactions on Artificial Intelligence</i>.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing Hybrid Long- and Short-Packet Based NOMA Systems via Joint Power Allocation and Beamforming Design</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>ACM Computing Surveys</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
@@ -314,7 +316,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-12 13:11:18 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-12 13:17:53 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
