--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Research Professor, Ph.D. <br />
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
 <ol>
-<li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2022.</p>
+<li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
 </li>
 <li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
 </li>
@@ -133,7 +133,7 @@ Research Professor, Ph.D. <br />
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the golden globe award 2021 from the Ministry of Science and Technology (Vietnam).</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-22 09:26:34 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-25 10:46:01 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
