--- a/activity.html
+++ b/activity.html
@@ -46,7 +46,7 @@
 <p><div id="TPC Chair/Track Chair"></p>
 <h2>TPC Chair/Track Chair</h2>
 <ul>
-<li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/">EAI GameNets 2022</a>, <a href="https://soict.org/">SoICT 2022</a></p>
+<li><p>2022: <a href="https://gamenets.eai-conferences.org/2022/">EAI GameNets 2022</a>, <a href="https://soict.org/">SoICT 2022</a>, <a href="https://atc-conf.org/">IEEE ATC 2022</a></p>
 </li>
 </ul>
 <p></div></p>
@@ -86,6 +86,8 @@
 </li>
 <li><p>IEEE Transactions on Parallel and Distributed Systems</p>
 </li>
+<li><p>IEEE Transactions on Network Science and Engineering</p>
+</li>
 <li><p>IEEE Transactions on Computational Social Systems </p>
 </li>
 <li><p>IEEE Journal on Selected Areas in Communications</p>
@@ -114,6 +116,8 @@
 </li>
 <li><p>IEEE Computational Intelligence Magazine</p>
 </li>
+<li><p>IEEE Control Systems Magazine</p>
+</li>
 <li><p>ACM Computing Surveys</p>
 </li>
 <li><p>IEEE Systems Journal</p>
@@ -129,7 +133,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-29 11:27:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-25 11:20:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
