--- a/activity.html
+++ b/activity.html
@@ -14,15 +14,16 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
-<div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-category">COIN Group</div>
+<div class="menu-item"><a href="aboutus.html">About&nbsp;Us</a></div>
+<div class="menu-item"><a href="member.html">Members</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching&nbsp;and&nbsp;Courseworks</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
+<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
-<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -53,11 +54,13 @@
 <p><div id="Technical Program Committee"></p>
 <h2>Technical Program Committee</h2>
 <ul>
-<li><p>2022: IEEE ICC, IEEE VTC2022-Spring.</p>
+<li><p>2023: IEEE ICC</p>
 </li>
-<li><p>2021: IEEE Globecom, IEEE VTC2021-Fall, IEEE ISC2, EAI Qshine 2021, 4th ICCAIS, IEEE ICC.</p>
+<li><p>2022: IEEE ICC, IEEE VTC2022-Spring</p>
 </li>
-<li><p>2020: 2nd ICCIS, IEEE WCNC, IEEE ICC, IEEE VTC2020, IEEE IEEE STP-CPS (IEEE SECON).</p>
+<li><p>2021: IEEE Globecom, IEEE VTC2021-Fall, IEEE ISC2, EAI Qshine 2021, 4th ICCAIS, IEEE ICC</p>
+</li>
+<li><p>2020: 2nd ICCIS, IEEE WCNC, IEEE ICC, IEEE VTC2020, IEEE IEEE STP-CPS (IEEE SECON)</p>
 </li>
 </ul>
 <p></div></p>
@@ -92,6 +95,8 @@
 </li>
 <li><p>IEEE Journal on Selected Areas in Communications</p>
 </li>
+<li><p>IEEE Journal of Selected Topics in Signal Processing</p>
+</li>
 <li><p>IEEE Transactions on Cognitive Communications and Networking</p>
 </li>
 <li><p>IEEE Transactions on Green Communications and Networking</p>
@@ -101,6 +106,8 @@
 <li><p>IEEE Open Journal of the Communications Society</p>
 </li>
 <li><p>IEEE Internet of Things Journal</p>
+</li>
+<li><p>Proceedings of the IEEE</p>
 </li>
 <li><p>IEEE Internet Computing</p>
 </li>
@@ -133,7 +140,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-25 11:20:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-04 12:02:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
