--- a/activity.html
+++ b/activity.html
@@ -13,17 +13,16 @@
 <td id="layout-menu">
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-category">Research</div>
+<div class="menu-item"><a href="publication.html">Publication</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
-<div class="menu-category">COIN Group</div>
-<div class="menu-item"><a href="aboutus.html">About&nbsp;Us</a></div>
-<div class="menu-item"><a href="member.html">Members</a></div>
-<div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching&nbsp;and&nbsp;Courseworks</a></div>
+<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
+<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
+<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
