--- a/publication.html
+++ b/publication.html
@@ -57,6 +57,12 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+</li>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+</li>
+<li><p>M. Le, <b>Q.-V. Pham</b>, N. Iradukunda, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+</li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under revision, <i>IEEE Transactions on Communications</i>.</p>
 </li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, D. V. Le, and V. J. Reddi, &ldquo;<a href="https://www.researchgate.net/publication/360541504_Improving_Performance_of_Deep_Reinforcement_Learning_by_Incorporating_Human_Expertise">Improve Performance of Deep Reinforcement Learning by Incorporating Human Expertise</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
