--- a/publication.html
+++ b/publication.html
@@ -197,7 +197,7 @@
 </li>
 <li><p>F. Figueiredo, M. Facina, R. Ferreira, R. Ruby, <b>Q.-V. Pham</b>, and G. Fraidenraich, &ldquo;<a href="https://ieeexplore.ieee.org/document/9333565">Large Intelligent Surfaces with Discrete Set of Phase-Shifts Communicating Through Double-Rayleigh Fading Channels</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 20768-20787, Jan. 2021.</p>
 </li>
-<li><p>Luan N. T. Huynh, <b>Q.-V. Pham</b>, T.D.T. Nguyen, M.D. Hossain, Y.-R. Shin, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9321325">Joint Computational Offloading and Data-Content Caching in NOMA-MEC Networks</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 12943-12954, Jan. 2021.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, T.D.T. Nguyen, M. D. Hossain, Y.-R. Shin, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9321325">Joint Computational Offloading and Data-Content Caching in NOMA-MEC Networks</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 12943-12954, Jan. 2021.</p>
 </li>
 <li><p>T.-T. Nguyen, V.-D. Nguyen, <b>Q.-V. Pham</b>, and J.-H. Lee, and Y.-H. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9195847">Resource Allocation for AF Relaying Wireless-powered Networks with Nonlinear Energy Harvester</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 25, no. 1, pp. 229-233, Jan. 2021.</p>
 </li>
