--- a/publication.html
+++ b/publication.html
@@ -75,8 +75,6 @@
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
-<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
-</li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
@@ -90,6 +88,11 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
+<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
+</li>
+<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, Kh.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research
+</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press. </p>
+</li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press.</p>
@@ -103,6 +106,8 @@
 <li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
+</li>
+<li><p>P. K. ReddyMaddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallua, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
 </li>
 <li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417422007400">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems with Applications</i>, vol. 203, pp. 117395, Oct. 2022. [<a href="https://www.mathworks.com/matlabcentral/fileexchange/111135-nonlinear-marine-predator-algorithm-nmpa">MATLAB Code</a>]</p>
 </li>
