--- a/publication.html
+++ b/publication.html
@@ -90,8 +90,7 @@
 <ol>
 <li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2107.14270">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
-<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research
-</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press. </p>
+<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press. </p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
