--- a/publication.html
+++ b/publication.html
@@ -106,7 +106,7 @@
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
-<li><p>P. K. ReddyMaddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallua, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
+<li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, O. Aouedi, G. Yenduri, S. Bhattacharya, and T. R. Gadekallu, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1084804522001138">Incentive techniques for the Internet of Things: A survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 206, pp. 103464, Oct. 2022.</p>
 </li>
 <li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417422007400">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems with Applications</i>, vol. 203, pp. 117395, Oct. 2022. [<a href="https://www.mathworks.com/matlabcentral/fileexchange/111135-nonlinear-marine-predator-algorithm-nmpa">MATLAB Code</a>]</p>
 </li>
